--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_dotenv: ^5.1.0
   flutter_riverpod: ^2.4.0
   go_router: ^10.1.2
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_lints: ^2.0.0
